面试评审评委端

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
@@ -100,8 +100,16 @@ th {
 	<div data-role="content" data-theme="a">	
 		<div data-role="collapsible" data-collapsed="false" style="background:#fff" data-theme="a" data-content-theme="a" class="con-tag smallerr">
 			<h3>选择面试组</h3>
-				<span id="msGroupSpan"></span>
+			<!--
+			<div style="width: 200px;float:left;">
+				<select id="msGroup" name="msGroup" data-mini="true"></select>
+			</div>
+			<div>
 				<a href="javascript:void(0);" id="favrecipelink" onclick="jxps()" data-role="button" data-inline="true" data-mini="true" data-theme="c" data-icon="arrow-r">进行评审</a>
+			</div>
+			-->
+			<span id="msGroupSpan"></span>
+			<a href="javascript:void(0);" id="favrecipelink" onclick="jxps()" data-role="button" data-inline="true" data-mini="true" data-theme="c" data-icon="arrow-r">进行评审</a>
 		</div>
 
 		<div data-role="collapsible" data-theme="a" data-content-theme="a" class="con-tag smallerr" >
