报名表标题修改

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -92,7 +92,7 @@
 		$(document).ready(function() {
 			if("none" == "%bind(:56)"){
 				/*bind(56) == none 表示当前是材料评审*/
-				document.title="清华大学经济管理学院MBA申请表"
+				document.title="华东理工大学商学院申请表"
 			}
 			//点击菜单的动作 如果是顶级层，则不做动作
 			$(".regmain-menu ul li[class!='menu-active-top']").click(function(){
