--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
@@ -89,7 +89,7 @@ th {
 		</div>
 		<div style="text-align:right; " class="r-action">
 			<a href="javascript:void(0);" id="ks_first_page_link"  onclick="ks_first_page();" data-theme="a" data-role="button" data-inline="true" data-icon="home">首页</a>
-			<a href="#modifyPswdPopup"  id="modifyPswd" data-rel="popup" data-role="button" data-inline="true" data-theme="a" data-icon="star" >修改密码</a>
+			<!-- <a href="#modifyPswdPopup"  id="modifyPswd" data-rel="popup" data-role="button" data-inline="true" data-theme="a" data-icon="star" >修改密码</a> -->
 			<a href="../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-theme="a" data-icon="delete">退出</a>
 		</div>
 		<div data-role="popup" id="modifyPswdPopup" data-position-to="window" data-dismissible="false" data-overlay-theme="b" style="min-width:350px;">
@@ -175,7 +175,7 @@ th {
 										<tr>
 											<td colspan='2'>&nbsp;&nbsp;&nbsp;&nbsp;
 												<a href="javascript:void(0);"  id="ks_save_bt" onclick="ks_save(this.id);"  data-role="button" data-inline="true" data-mini="true" data-icon="check" data-theme="a">保 存</a>
-												<a href="javascript:void(0);"  id="ks_save_get_bt" onclick="ks_save(this.id);"  data-role="button" data-inline="true" data-mini="true" data-icon="check" data-theme="a">保存并获取下一个考生</a>
+												<!-- <a href="javascript:void(0);"  id="ks_save_get_bt" onclick="ks_save(this.id);"  data-role="button" data-inline="true" data-mini="true" data-icon="check" data-theme="a">保存并获取下一个考生</a> -->
 												<a href="javascript:void(0);"  id="ks_back_bt" onclick="ks_back();"  data-role="button" data-inline="true" data-mini="true" data-icon="back" data-theme="a">返回评审界面</a>
 											</td>
 										</tr>
