--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_INDEX.html
@@ -30,7 +30,7 @@
 
 			<a href="#" id="favrecipelink" data-role="button" data-inline="true" data-icon="home" data-theme="a">首页</a>
 			<!--a href="%bind(:4)" target="_blank" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="info">联系方式</a-->
-			<a href="#modifyPswdPopup"  id="modifyPswd" data-rel="popup" data-role="button" data-theme="a" data-inline="true" data-icon="star" >修改密码</a>
+			<!-- <a href="#modifyPswdPopup"  id="modifyPswd" data-rel="popup" data-role="button" data-theme="a" data-inline="true" data-icon="star" >修改密码</a> -->
 			<a href="../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-theme="a" data-icon="delete">退出</a>
 
 			<div data-role="popup" id="modifyPswdPopup" data-position-to="window" data-dismissible="false" data-theme="a" data-overlay-theme="a" style="min-width:350px;">
