--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
@@ -4,6 +4,10 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 		<title>%bind(:13)</title>
+		<link href="/statics/js/onlineSurvey/css/m/public.css" rel="stylesheet" type="text/css" />
+		<link href="/statics/js/onlineSurvey/css/m/index.css" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="/statics/js/onlineSurvey/formvalidator/m/themes/Custom/style/style.css" />
+		
 		<link rel="stylesheet" href="%bind(:21)/statics/js/onlineSurvey/css/m/LCalendar.css"/>
 		<link href="%bind(:21)/statics/js/onlineSurvey/css/m/mobile.css" rel="stylesheet" type="text/css"/>
 		<link rel="stylesheet" href="%bind(:21)/statics/js/survey/assets/libs/unitegallery/css/unite-gallery.css" type="text/css"/>
