面试评审评委端：签名前校验能否提交+如果有未评审的面试组考生不能提交

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
@@ -193,7 +193,7 @@ th {
 				<div data-role="content" data-theme="a" role="main" align="center">
 					<P style="text-align:left">是否提交本次评议的全部考生信息？<BR/>提交后将无法对考生评议成绩进行修改，是否继续？</P>
 					<a href="javascript:void(0);" data-role="button" data-inline="true" data-rel="back" >&nbsp;&nbsp;否&nbsp;&nbsp;</a>    
-					<a href="javascript:void(0);" data-role="button" data-inline="true" data-rel="back" onclick="sign();" data-theme="c" data-transition="flow">&nbsp;&nbsp;是&nbsp;&nbsp;</a>
+					<a href="javascript:void(0);" data-role="button" data-inline="true" data-rel="back" onclick="beforeSubmit();" data-theme="c" data-transition="flow">&nbsp;&nbsp;是&nbsp;&nbsp;</a>
 				</div>
 		</div>
 
