报名活动中心，多机构样式修改

--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD3.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD3.html
@@ -83,8 +83,8 @@ body, button, input, select, textarea {
 }
 
 .apply-items.inptype:focus,.apply-items.seltype:focus {
-	border-color: #078445;
-	box-shadow: 0 0 1px #078445;
+	border-color: #e3001e;
+	box-shadow: 0 0 1px #e3001e;
 }
 
 .apply-signin {
@@ -97,7 +97,7 @@ body, button, input, select, textarea {
 	position: relative;
 	line-height: 40px;
 	height: 40px;
-	background-color: #078445;
+	background-color: #e3001e;
 	color:#fff;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
@@ -181,11 +181,11 @@ body, button, input, select, textarea {
 }
 
 .apply-submit {
-	background-color: #078445;
+	background-color: #e3001e;
 }
 
 .apply-submit:hover {
-	background-color: #078445;
+	background-color: #e3001e;
 }
 
 .apply-popover {
