考生项目调整功能

--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_LC_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_LC_HTML.html
@@ -1,5 +1,8 @@
 <div class="zxj_tit1">%bind(:1) &nbsp;&nbsp;%bind(:9)</div>
 <div class="select_project">  
+	<input type="hidden" id="classId" value="%bind(:11)">
+	<input type="hidden" id="appinsId" value="%bind(:12)">
+	<a id="projectAdjust" class="zxj_more1" style="margin-bottom: 10px;">%bind(:10)</a>
 	<a href="%bind(:7)" class="zxj_more1" style="margin-bottom: 10px;">%bind(:2)</a>
 	<a href="%bind(:6)" class="zxj_more1" style="margin-bottom: 10px;">%bind(:3)</a>
 </div>
