--- a/src/main/resources/html/TZClueCommonBundle/TZ_CLUEM_COMMON_HTML.html
+++ b/src/main/resources/html/TZClueCommonBundle/TZ_CLUEM_COMMON_HTML.html
@@ -296,7 +296,7 @@
 							</p>
 							<div class="overhidden" style="height:100%;">
 								<textarea id="zxnr" style="margin-top:3%;border:1px solid #ddd;margin-bottom:2%;
-								width:99%;height:70%;"></textarea>
+								width:99%;height:70%;" placeholder="请输入咨询内容"></textarea>
 							</div>
 						</div>
 						<p id="zxnrSpan" class="reg_tips"></p>
