考生上传复试资料功能

--- a/src/main/resources/html/TZSitePageBroadStyleBundle/TzScriptsIndex.html
+++ b/src/main/resources/html/TZSitePageBroadStyleBundle/TzScriptsIndex.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="%bind(:1)/statics/css/website/layui.css" />
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/website/broad/gblconst.js"></script>
 <script type="text/javascript"
@@ -6,6 +7,8 @@
 	src="%bind(:1)/statics/js/lib/extjs/ext-all.js" symbol="backend"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/tranzvision/util/layer.js"></script>
+<script type="text/javascript"
+	src="%bind(:1)/statics/js/tranzvision/util/layui.js"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/lib/ueditor/ueditor.config.js"
 	symbol="backend"></script>
