--- a/src/main/resources/html/TZSitePageBroadStyleBundle/TzScriptsIndexRelease.html
+++ b/src/main/resources/html/TZSitePageBroadStyleBundle/TzScriptsIndexRelease.html
@@ -1,9 +1,12 @@
+<link rel="stylesheet" type="text/css" href="%bind(:1)/statics/css/website/layui.css" />
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/website/broad/gblconst.js"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/lib/layer/layer.js"></script>
+<script type="text/javascript"
+	src="%bind(:1)/statics/js/lib/layer/layui.js"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/broad/pagefunc.js"></script>
 <script type="text/javascript"
