--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_SUCCESS_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_SUCCESS_HTML.html
@@ -17,6 +17,7 @@
 	    		<div class="top_inner">
 	    			您的答卷已经提交，感谢您的参与！
 	    		</div>
+	
 	    		<!-- 文字 -->
 	    		<div class="main_font">
 	    			 <p>亲爱的朋友：</p>
@@ -24,7 +25,18 @@
 	    			 <p class="text_2">对您填写的信息，我们将严格遵守《统计法》予以保密，所得调查数据仅用于科学研究需要。请根据您的实际情况放心填写。</p>
 	    			 <p class="text_2">再次对您表示感谢！</p>
 	    		</div>
-	    		
+	    		<button id="goBack" style="
+				     background-color: 00a1e4; /* Green */
+				     border: none;
+				     color: white;
+				     padding: 12px 32px;
+				     text-align: center;
+				     text-decoration: none;
+				     display: inline-block;
+				     font-size: 15px;
+				     border-radius: 13px;
+				     margin-left: 400px;
+				">返回首页</button>
 	    		<!-- 卷尾内容 -->
 	    		<div class="footer1">
 	    			北京创景咨询提供技术支持
@@ -36,6 +48,11 @@
 	 var height=document.body.clientHeight; 
 
 	 $(".bg").css("height",height+"px")
+	 $(function(){
+		 $("#goBack").click(function(){
+			 history.go(-2);
+		 })
+	 })
 </script>
 </body>
 </html>
