--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_SECRETARY_EVALUATION_LOGIN.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_SECRETARY_EVALUATION_LOGIN.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>清华大学经济管理学院MBA面试秘书评审系统</title>
+<title>华东理工大学MBA面试秘书评审系统</title>
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/css/evaluation/style.css" />
 <script type="text/javascript">
 	var ContextPath = "%bind(:1)";
