--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_SECRETARY_EVALUATION_TOUCH_BATCH.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_SECRETARY_EVALUATION_TOUCH_BATCH.html
@@ -73,7 +73,7 @@ th {
 				<a href="javascript:void(0);" onclick="goMainpage()" id="favrecipelink" data-role="button" data-theme="a" data-inline="true" data-icon="home">首页</a>		
 				<!-- a href="%bind(:8)" target="_blank" id="favrecipelink" data-role="button" data-theme="b" data-inline="true" data-icon="info">联系方式</a-->
 				<!-- <a href="#modifyPswdPopup"  id="modifyPswd" data-rel="popup" data-role="button" data-inline="true" data-theme="a" data-icon="star" >修改密码</a> -->
-				<a href="../logout?type=interview" target="_self"  data-role="button" data-inline="true" data-theme="a" data-icon="delete">退出</a>
+				<a href="../logout?type=secretary" target="_self"  data-role="button" data-inline="true" data-theme="a" data-icon="delete">退出</a>
 			</div>
 			<div data-role="popup" id="modifyPswdPopup" data-position-to="window" data-dismissible="false" data-overlay-theme="b" style="min-width:350px;">
 				<a href="#" data-rel="back" id="closeModify" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">关闭</a>
@@ -164,12 +164,12 @@ th {
 
 
 				</div>
-				<div style="text-align:right; " class="r-action">
+				<!-- <div style="text-align:right; " class="r-action">
 
 					总体提交状态：【<span id="submtall_flag"></span>】&nbsp;&nbsp;
 
 					<a href="javascript:void(0);" id="favrecipelink" onclick="tosubmitall()"  data-role="button" data-inline="true" data-mini="true" data-icon="arrow-r">提交</a>
-				</div>
+				</div> -->
 		</div>
 
 		<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-corners="false"  data-position-to="origin">
