短信邮件搜索结果

--- a/src/main/resources/html/TZClueCommonBundle/TZ_CLUEM_COMMON_HTML.html
+++ b/src/main/resources/html/TZClueCommonBundle/TZ_CLUEM_COMMON_HTML.html
@@ -9,8 +9,8 @@
 <title>在线咨询</title>
 <script type="text/javascript">
 	var TzUniversityContextPath = "";
-	/* var strJgid = "SEM";
-	var strSiteId = "72"; */
+	var strJgid = "SEM";
+	var strSiteId = "72"; 
 </script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
@@ -386,7 +386,7 @@
 					dataType:"json",
 					async:false,
 					data:{tzParams:tzParams},
-					url:"%bind(:2)/dispatcher",
+					url:"%bind(:1)/dispatcher",
 					success:function(res){	
 						alert(res.comContent.msg);
 						window.location.reload();
