在线咨询修改文字描述

--- a/src/main/resources/html/TZClueCommonBundle/TZ_CLUE_COMMON_HTML.html
+++ b/src/main/resources/html/TZClueCommonBundle/TZ_CLUE_COMMON_HTML.html
@@ -232,7 +232,7 @@
 						</div>
 						<div class="main_full_line">
 							<div class="main_full_line_left">
-								管理年限/：
+								管理年限/年：
 							</div>
 							<div class="main_full_line_right">
 	
