--- a/src/main/resources/html/TZClueCommonBundle/TZ_CLUEM_COMMON_HTML.html
+++ b/src/main/resources/html/TZClueCommonBundle/TZ_CLUEM_COMMON_HTML.html
@@ -9,8 +9,7 @@
 <title>在线咨询</title>
 <script type="text/javascript">
 	var TzUniversityContextPath = "";
-	var strJgid = "SEM";
-	var strSiteId = "72"; 
+ 
 </script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
@@ -144,18 +143,19 @@
 .headzdy {
     position: relative;
     width: 100%;
-    height: 2.2rem;
-    background: #f85959;
+    height: 2.5rem;
+    background: %bind(:3);
     background-size: auto;
     background-size: 100%;
     font-size: 0.6rem;
-    line-height: 2.2rem;
+    line-height: 1rem;
+    padding-top: 0.4rem;
     text-align: center;
     color: #fff;
 }
 
 .register_body p {
-    color: #f85959;
+    color: %bind(:3);
     font-size: 0.54rem;
     height:1rem;
 }
@@ -180,8 +180,9 @@
 		<div class="viewport-adaptive" id="before">
 			<div class="bg1">
 				<!-- 头部 -->
-				<div class="headzdy">
-					在线咨询 <a href="/user/login/sem/72"><i></i></a>
+				<div class="headzdy" >
+					<p>在线咨询</p>
+					<p>%bind(:4)</p>
 				</div>
 				<div class="register">
 					<form id="signupForm" name="signupForm" method="post"
@@ -197,7 +198,7 @@
 							</div>
 						</div>
 						<p id="xmSpan" class="reg_tips"></p>
-						<div class="register_body">
+						<!-- <div class="register_body">
 							<p>性别</p>
 							<div class="overhidden">
 								<select name='xb' id='xb' class='select_pros'><option
@@ -214,7 +215,7 @@
 									placeholder="请输入年龄" />
 							</div>
 						</div>
-						<p id="nlSpan" class="reg_tips"></p>
+						<p id="nlSpan" class="reg_tips"></p> -->
 						<div class="register_body">
 							<p id="sjT">
 								手机*<img class='reg_right'
@@ -237,7 +238,7 @@
 							</div>
 						</div>
 						<p id="yxSpan" class="reg_tips"></p>
-						<div class="register_body">
+						<!-- <div class="register_body">
 							<p>最高学历</p>
 							<div class="overhidden">
 								<select name='zgxl' id='zgxl' class='select_pros'>
@@ -287,12 +288,12 @@
 									<option value='D'>10年以上</option>
 								</select>
 							</div>
-						</div>
+						</div> -->
 						<div class="register_body" style="height:6rem;">
 							<p id="zxnrT">
-								咨询内容(长文本)*
-								<img class='reg_right'
-								src='%bind(:1)/statics/css/website/m/images/reg_warm.png'>
+								咨询内容
+								<!-- <img class='reg_right'
+								src='%bind(:1)/statics/css/website/m/images/reg_warm.png'> -->
 							</p>
 							<div class="overhidden" style="height:100%;">
 								<textarea id="zxnr" style="margin-top:3%;border:1px solid #ddd;margin-bottom:2%;
@@ -302,7 +303,7 @@
 						<p id="zxnrSpan" class="reg_tips"></p>
 					</form>
 				</div>
-				<a href="javascript:void(0)" class="register_btn" id="sub" style="background: #f85959;">提交申请</a>
+				<a href="javascript:void(0)" class="register_btn" id="sub" style="background: %bind(:3);">提交申请</a>
 			</div>
 		</div>
 
@@ -327,10 +328,10 @@
 			xmCheck(id);
 		});
 		
-		$("#nl").blur(function(){
+		/* $("#nl").blur(function(){
 			var id = "nl";
 			ageCheck(id);
-		});
+		}); */
 		
 		$("#sj").blur(function(){
 			var id = "sj";
@@ -342,42 +343,42 @@
 			emailCheck(id);
 		});
 		
-		$("#zxnr").blur(function(){
+		/* $("#zxnr").blur(function(){
 			var id = "zxnr";
 			zxnrCheck(id);
-		});
+		}); */
 		
 		$("#sub").click(function(){
 			xmCheck("xm");
-			ageCheck("nl");
+			//ageCheck("nl");
 			phoneCheck("sj");
 			emailCheck("yx");
-			zxnrCheck("zxnr");
-			if(xmCheckB&&ageCheckB&&phoneCheckB&&emailCheckB&&zxnrCheck){
+			//zxnrCheck("zxnr");
+			if(xmCheckB&&phoneCheckB&&emailCheckB){
 				var xmV = $("#xm").val();
-				var xbV = $("#xb").val();
-				var nlV = $("#nl").val();
+				/* var xbV = $("#xb").val();
+				var nlV = $("#nl").val(); */
 				var sjV = $("#sj").val();
 				var yxV = $("#yx").val();
-				var zgxlV = $("#zgxl").val();
+				/* var zgxlV = $("#zgxl").val();
 				var gzdwV = $("#gzdw").val();
 				var xrzwV = $("#xrzw").val();
 				var gznxV = $("#gznx").val();
 				var glnxV = $("#glnx").val();
-				var jgIdV = $("#jgId").val();
+				var jgIdV = $("#jgId").val(); */
 				var zxnrV = $("#zxnr").val().trim();
 				
 				var tzParams = '{"ComID":"TZ_CLUE_COMMON_COM","PageID":"TZ_CLUE_STD","OperateType":"submitAll","comParams":'+
 				'{"xm":"'+xmV+'",'+
-				'"xb":"'+xbV+'",'+
-				'"nl":"'+nlV+'",'+
+				/* '"xb":"'+xbV+'",'+
+				'"nl":"'+nlV+'",'+ */
 				'"sj":"'+sjV+'",'+
 				'"yx":"'+yxV+'",'+
-				'"zgxl":"'+zgxlV+'",'+
+				/* '"zgxl":"'+zgxlV+'",'+
 				'"gzdw":"'+gzdwV+'",'+
 				'"xrzw":"'+xrzwV+'",'+
 				'"gznx":"'+gznxV+'",'+
-				'"glnx":"'+glnxV+'",'+
+				'"glnx":"'+glnxV+'",'+ */
 				'"jgId":"%bind(:2)",'+
 				'"zxnr":"'+zxnrV+'"}}';
 				
@@ -484,11 +485,11 @@
 			var ts = '';
 			var tsyj = '';
 			if($("#"+id+"").val().trim().length<=0){
-				ts = '咨询内容(长文本)*<img class="reg_right" src="%bind(:1)/statics/css/website/m/images/reg_wrong.png">';
+				ts = '咨询内容*<img class="reg_right" src="%bind(:1)/statics/css/website/m/images/reg_wrong.png">';
 				tsyj = '必填项！';
 				zxnrCheckB = false;
 			}else{
-				ts = '咨询内容(长文本)*<img class="reg_right" src="%bind(:1)/statics/css/website/m/images/reg_right.png">';
+				ts = '咨询内容*<img class="reg_right" src="%bind(:1)/statics/css/website/m/images/reg_right.png">';
 				zxnrCheckB = true;
 			}
 			$("#zxnrT").html(ts);
