--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
@@ -147,6 +147,10 @@ $(function(){
 	  	<p>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</p>
 	    </div>
   </div>
+  <!--计时器-->
+<div class="timer" id="timer">
+	<div class="time-box"><span id="name"></span> 面试时间 <span id="time"></span></div>
+</div>
 	<!-- content end --> 
 </div></body>
 </html>
