面试端增加时间

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
@@ -22,7 +22,11 @@
 	var scoreUrl = ContextPath+"/dispatcher";
 	var getNextUrl = ContextPath+"/dispatcher?classid=interview&OperateType=EJSON";
 
-
+	var pweiType = "A";
+	var msStart = "";
+	var msSeconds = 0;
+	var baseUrl = ContextPath+"/dispatcher?classid=interview&OperateType=EJSON";
+	
 	var dfq_arr ;//取数组
 
 	var sf_qk_fjd = "Y" ;//全局变量是否情况父节点
@@ -36,7 +40,7 @@
 </script>
 
 <script type="text/javascript" src="%bind(:1)/statics/js/evaluation/interview/touch/evaluation-detail-touch.js"></script>
-
+<script type="text/javascript" src="%bind(:1)/statics/js/evaluation/interview/touch/timer.js"></script>
 <style type="text/css">
 caption {
 	padding: 0 0 0 0;
@@ -74,11 +78,16 @@ th {
   top :0px;
   opacity :0.5;
 }
+.timer{height: 60px;width: 40%;z-index: 999;margin-left: 30%;margin-right: 30%;position: fixed;text-align: center;line-height: 60px;display:none;}
+.timer .time-box{width: 355px;height: 100%;background: #fa7e00;display: inline-block;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;color: #000;font-size: 25px;}
 </style>
 
 </head> 
 <body> 
-
+<!--计时器-->
+<div class="timer" id="timer">
+	<div class="time-box"><span id="name"></span> 面试时间 <span id="time"></span></div>
+</div>
 <div data-role="page" class="type-interior">
 
 	<div data-role="header" data-theme="b">
@@ -306,6 +315,9 @@ th {
 				});
 			}
 		});
+		//5s刷新一次计时器
+		refreshTimer();
+		setInterval(refreshTimer,5000);
 </script>
 </body>
 </html>
