--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_SECRETARY_EVALUATION_TOUCH_BATCH.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_SECRETARY_EVALUATION_TOUCH_BATCH.html
@@ -23,6 +23,7 @@
 	var pweiType = "A";
 	var msStart = "";
 	var msSeconds = 0;
+	var endSeconds = 0;
 </script>
 
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/layer/layer.js"></script>
